clusters/talos-cluster/usesend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usesend
  namespace: usesend
spec:
  selector:
    app: usesend
  ports:
    - name: http
      port: 80
      targetPort: 3000
