clusters/talos-cluster/usesend/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: usesend-route
  namespace: usesend
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "usesend.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: usesend
          port: 80
